# pyinit

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: Doxyfile
docs/html/: ____init_____8py.html  ____init_____8py.js  add_8py.html  add_8py.js  annotated.html  annotated_dup.js  build_8py.html  build_8py.js  check_8py.html  check_8py.js  classes.html  classpyinit_1_1scan_1_1ProjectScanner-members.html  classpyinit_1_1scan_1_1ProjectScanner.html  classpyinit_1_1scan_1_1ProjectScanner.js  classpyinit_1_1scan_1_1ProjectScanner_a2d53f2abe4bd539fcf862a47ff410e20_icgraph.dot  classpyinit_1_1scan_1_1ProjectScanner_a3709f311c49951e79ed97942e937e4c9_cgraph.dot  classpyinit_1_1scan_1_1ProjectScanner_ad3b4022da0f84c3e39981ee6856c8268_cgraph.dot  clean_8py.html  clean_8py.js  create_8py.html  create_8py.js  dir_223829f4dd5ebbdb0c96e6412c779722.html  dir_223829f4dd5ebbdb0c96e6412c779722.js  dir_223829f4dd5ebbdb0c96e6412c779722_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  docker_8py.html  docker_8py.js  doxygen_crawl.html  env_8py.html  env_8py.js  files.html  format_8py.html  format_8py.js  functions.html  functions_func.html  functions_vars.html  graph_8py.html  graph_8py.js  graph_legend.html  (+87 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+9 more)
src/pyinit/: __init__.py  add.py  add_module.py  build.py  build_project.py  bump_project.py  check.py  clean.py  clean_project.py  create.py  docker.py  dockerize_project.py  env.py  env_manager.py  format.py  format_project.py  graph.py  graph_project.py  hooks_manager.py  info.py  init.py  init_project.py  install.py  license_manager.py  lint_project.py  lock.py  lock_project.py  main.py  new.py  new_project.py  release.py  run.py  run_project.py  scan.py  scan_project.py  test.py  test_project.py  uninstall.py  update.py  update_project.py  (+4 more)
src/pyinit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/app/: pyproject.toml
templates/app/src/##PROJECT_NAME##/: main.py
templates/cli/: pyproject.toml
templates/cli/src/##PROJECT_NAME##/: main.py
templates/flask/: .flaskenv  pyproject.toml
templates/flask/src/##PROJECT_NAME##/: main.py
templates/lib/: pyproject.toml
templates/lib/src/##PROJECT_NAME##/: __init__.py
tests/: test_create.py  test_init.py  test_release.py  test_scan.py
