[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyinit"
version = "1.0.3"
authors = [
    { name = "Karim", email = "daynews19@gmail.com" },
]
description = "A tool for creating and managing Python projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "tomli",
    "tomli-w",
]

[project.scripts]
pyinit = "pyinit.main:main"

[tool.setuptools.packages.find]
where = [
    "src",
]
