[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "##PROJECT_NAME##"
version = "0.1.0"
authors = [
  { name = "##AUTHOR_NAME##", email = "##AUTHOR_EMAIL##" },
]
description = "A new Flask web application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask",
    "python-dotenv",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
